[package]
name = "hopdot-server-alternate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bson = { version = "3.0.0", features = ["serde"] }
common = { git = "https://github.com/rdrpenguin04/hopdot" }
dashmap = "6.1.0"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["server"] }
hyper-tungstenite = "0.18.0"
hyper-util = { version = "0.1.17", features = ["http1", "http2", "server"] }
indoc = "2.0.6"
rand = "0.9.2"
rustrict = "0.7.36"
serde = { version = "1.0.226", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
